# payments

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: alembic.ini  env.py
alembic/versions/: 001_initial_tables.py
app/: main.py
app/application/ports/: outbox.py  unit_of_work.py
app/application/use_cases/: create_payment.py  get_payment.py  mark_payment_failed.py  process_payment.py
app/domain/payment/: __init__.py  enums.py  events.py  exceptions.py  payment.py  repositories.py  value_objects.py
app/entrypoints/http/: dependencies.py  exception_handlers.py
app/entrypoints/http/v1/: __init__.py
app/entrypoints/http/v1/payments/: dependencies.py  endpoint.py  schemas.py
app/entrypoints/messaging/: worker.py
app/infrastructure/: outbox_relay.py  outbox_worker.py  unit_of_work.py
app/infrastructure/adapters/: payment_gateway_random.py  rabbit_event_publisher.py  webhook_notifier_http.py
app/infrastructure/adapters/repositories/: outbox_repository_pg.py  payment_repository_pg.py
app/infrastructure/configs/: __init__.py  config.py  session.py
app/infrastructure/db/: mappers.py  models.py
tests/: conftest.py  factories.py  test_consumer.py
tests/integration/: conftest.py  test_outbox_relay.py  test_worker.py
tests/integration/api/: conftest.py
tests/integration/api/v1/payments/: test_create.py  test_get.py
